# traffic-accident-analysis-agent

./: .env.example  .gitignore  GEMINI.md  README.md  app.py  pyproject.toml  run.py
blog (Design Docs)/: データ分析エージェント最前線：2026年の動向と実践レポート.md  （参考）Claude Code × 交通事故統計で見えた「交通事故死者ゼロ」への現在地.md
src/: agent.py  preprocess.py  tools.py
src/context/: background.yaml  catalog.yaml  domain.yaml
