[project]
name = "traffic-accident-analysis-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.97.0",
    "duckdb>=1.5.2",
    "google-genai>=1.74.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.9",
    "openai>=2.33.0",
    "openai-agents>=0.15.1",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "streamlit>=1.57.0",
]
